# SLama

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  sonar-project.properties
cmake/: FindCheck.cmake
src/: block.c  block.h  matrix.c  matrix.h  matrix_algorithms.c  matrix_algorithms.h  matrix_core.c  matrix_core.h  vector.c  vector.h
tests/: CMakeLists.txt  base-matrix-test.c  block-test.c  matmul-test.c  matrix-base-algo-test.c  test_utils.h  vector-test.c
